# browser-policy-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  coverage.xml  data.db  deploy_bpm.example.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  firefox-live-amo.yml  firefox-live.yml  gist-snapshot.yml  xdist-pilot.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20251018_01_init_policies.py  20251022_5cb73fdb68ed_init_policies.py  20251022_init_profiles.py  20251026_add_deleted_at_profiles.py  20251026_add_deleted_at_to_policies.py  20260323_normalize_profiles_schema.py  20260330_upgrade_profiles_to_firefox149.py  20260423_upgrade_profiles_to_firefox150.py  20260521_upgrade_profiles_to_firefox151.py  20260606_drop_profile_owner.py  20260620_upgrade_profiles_to_firefox152.py
app/: __init__.py  config.py  db.py  main.py
app/api/: export.py  exports.py  health.py  import_policies.py  legacy_api_import.py  legacy_core.py  legacy_firefox.py  legacy_policies.py  policies.py  profiles.py  schemas.py  validation.py
app/compliance/: __init__.py
app/core/: config.py  locales.py  policy_validation.py  schema_channels.py  schemas_loader.py  validation.py
app/exporters/: __init__.py  firefox.py
app/i18n/: __init__.py  de.json  en.json  es-ES.json  fr.json  ru.json  zh-CN.json
app/i18n_src/: README.md  catalog-order.json
app/middleware/: __init__.py  locale.py  security.py
app/models/: __init__.py  db.py  dto.py  policy.py  policy_schema.py  profile.py
app/presets/: basic_corporate.yaml  soc_hard.yaml  (+1 more)
docs/: all_settings_search_filter_i18n_audit_2026-05-30.md  bpm_0_8_5_refactoring_backlog_2026-06-01.md  bpm_0_8_7_1_compare_clone_ui_polish_backlog_2026-06-11.md  bpm_0_8_7_profile_comparison_clone_owner_cleanup_backlog_2026-06-05.md  bpm_0_8_8_all_settings_architecture_backlog_2026-06-12.md  chromium_locale_smoke_matrix_audit_2026-05-30.md  cis_firefox_benchmark_feature_analysis_2026-04-12.md  cis_firefox_milestone_1_backlog_2026-04-12.md  cis_firefox_milestone_2_backlog_2026-04-12.md  cis_firefox_milestone_4_backlog_2026-04-12.md  cis_firefox_milestone_6_backlog_2026-04-13.md  cis_firefox_update_runbook_2026-04-13.md  de_locale_catalog_notes_2026-05-29.md  de_mozilla_terminology_audit_2026-05-29.md  de_overflow_audit_2026-05-30.md  dependency_refresh_backlog_2026-04-29.md  docs-index.md  docs-manifest.json  epic-backlog-creation-runbook.md  es_es_locale_catalog_notes_2026-05-29.md  firefox-live-testing.md  firefox-schema-update-runbook.md  firefox_policies_json_import_export_backlog_2026-04-13.md  firefox_policies_json_migration_notes_2026-04-14.md  fr_locale_catalog_notes_2026-05-29.md  fr_mozilla_terminology_audit_2026-05-29.md  frontend_self_hosting_backlog.md  global_locale_loading_assumptions_audit_2026-05-21.md  guided_editor_six_step_mapping_2026-05-16.md  locale_ownership_2026-06-01.md  locale_placeholder_identifier_rules_2026-05-29.md  locale_screenshot_pack_audit_2026-05-30.md  locale_update_runbook_2026-06-01.md  locale_viewport_overflow_assertions_audit_2026-05-30.md  locale_visible_english_allowlists_2026-05-30.md  localized_import_edit_export_workflow_audit_2026-05-31.md  mozilla_terminology_verification_workflow_2026-05-29.md  profile_window_mode_separation_backlog_2026-04-29.md  profile_wizard_advanced_only_boundaries_2026-04-04.md  profile_wizard_cognitive_load_backlog_2026-04-14.md  (+15 more)
tests/: app_harness.py  cache_harness.py  conftest.py  db_harness.py  docs_index.py  marker_policy.py  support.py  test_all_settings_configured_mode_contract.py  test_all_settings_current_contracts_doc.py  test_all_settings_detail_primary_editor_contract.py  test_all_settings_inventory_counts.py  test_all_settings_keyboard_focus_contract.py  test_all_settings_locale_catalog_contract.py  test_all_settings_mode_copy_contract.py  test_all_settings_performance_contract.py  test_all_settings_route_state_contract.py  test_all_settings_screen_reader_labels_contract.py  test_all_settings_search_filter_i18n.py  test_all_settings_search_grouping_contract.py  test_all_settings_source_state_fixtures.py  test_all_settings_triage_route_contract.py  test_api.py  test_api_import.py  test_api_import_upload.py  test_api_validation_unit.py  test_app_harness_unit.py  test_bootstrap_config.py  test_browser_datetime_i18n.py  test_cache_harness_unit.py  test_chromium_locale_smoke_matrix_contract.py  test_ci_workflow_layers.py  test_cjk_font_fallback_contract.py  test_current_version_surfaces.py  test_db_harness_unit.py  test_db_helpers.py  test_db_legacy_schema_bridge.py  test_db_session_smoke.py  test_de_overflow_layout_contract.py  test_docs_index.py  test_e2e_profile_lifecycle.py  (+118 more)
tmp_screens/: wizard-final-corporate-cis-l2-chromium-metrics.json
tools/: __init__.py  backfill_profile_schema_versions.py  build_locale_catalogs.py  build_monaco_bundle.sh  build_profiles_css.py  convert_policies_from_upstream.py  debug_language_switch.py  gist_manifest.json  locale_inventory.py  locale_policy_label_quality.py  publish_to_gist.py  rebuild_frontend_vendor.sh  repo_health_report.py  run_local_chromium_ui_audit.py  setup_firefox_live_browsers.sh  update_schemas.py  verify_frontend_vendor.py
(+304 files in other folders)
