[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-policy-manager"
version = "0.3.0"
description = "Manage Firefox enterprise policies (profiles, schemas, presets)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valery Ledovskoy", email = "goudron@users.noreply.github.com" }]
license = { text = "MPL-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage>=7.6",
  "mypy>=1.11",
  "ruff>=0.6",
  "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
  -q
  --disable-warnings
  --maxfail=1
  --cov=app --cov=tests
  --cov-report=term-missing
  --cov-report=html
  --cov-fail-under=85
"""
testpaths = ["tests"]
