[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-policy-manager"
version = "0.4.0-dev"
description = "Enterprise browser policy manager: FastAPI backend, validation, export, and simple UI."
readme = "README.md"
requires-python = ">=3.13"
license = "MPL-2.0"
authors = [
  { name = "Valery Ledovskoy" }
]
keywords = ["fastapi", "firefox", "enterprise policies", "jsonschema", "alembic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Operating System :: OS Independent",
]

dependencies = [
  # Web & app
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",

  # Config & validation
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "jsonschema>=4.23.0",
  "fastjsonschema>=2.19.1",

  # DB & migrations
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
  "aiosqlite>=0.20.0",

  # Utils
  "pyyaml>=6.0.2",
  "httpx>=0.27.2",
  "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/Goudron/browser-policy-manager"

[project.optional-dependencies]
dev = [
  # testing
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "anyio>=4.4.0",

  # lint & format & types
  "ruff>=0.6.9",
  "black>=24.10.0",
  "mypy>=1.11.2",
  "types-requests>=2.32.0.20241016",

  # local dev
  "ipython>=8.27.0",
]

postgres = [
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "tools*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",  # длина строки — контролирует black
]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
exclude = [
  "alembic/versions/.*",
  "dist/.*",
  "build/.*",
]

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "order: test order marker",
]
